[gd_scene load_steps=2 format=3 uid="uid://c0rvebin2dhlv"]

[ext_resource type="Script" path="res://Enemy Manager/Scripts/formation_manager.gd" id="1_cojxs"]

[node name="FormationManager" type="Node2D"]
script = ExtResource("1_cojxs")
formation_completion_delay = 0.5

[connection signal="all_enemies_destroyed" from="." to="." method="_on_all_enemies_destroyed"]
[connection signal="enemy_spawned" from="." to="." method="_on_enemy_spawned"]
[connection signal="formation_complete" from="." to="." method="_on_formation_complete"]
